--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html>
 
     <head>
+            <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SE991K3VEL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SE991K3VEL');
+</script>
             <!-- FAVICON -->
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 
