--- a/standings/index.html
+++ b/standings/index.html
@@ -37,22 +37,22 @@
         <i class="fas fa-bars"></i>
         </label>
         <ul>
-           <li><a href="http://footballify.net">Football Scores</a></li>
-           <li><a href="http://footballify.net/standings">Standings</a></li>
-           <li><a href="#">Stats</a></li>
-           <li><a href="http://footballify.net/livestreams">Live Streams</a></li>
-           <li><a href="http://footballify.net/contact">Contact</a></li>
+           <li><a class="topnav" href="http://footballify.net">Football Scores</a></li>
+           <li><a class="topnav" href="http://footballify.net/standings">Standings</a></li>
+           <li><a class="topnav" href="#">Stats</a></li>
+           <li><a class="topnav" href="http://footballify.net/livestreams">Live Streams</a></li>
+           <li><a class="topnav" href="http://footballify.net/contact">Contact</a></li>
         </ul>
      </nav>
      <nav class="leaguesnav">
         <input type="checkbox" id="click">
         <ul>
-           <li><a class ="active">Premier League</a></li>
-           <li><a>La Liga</a></li>
-           <li><a>Bundesliga</a></li>
-           <li><a>Serie A TIM</a></li>
-           <li><a>Ligue 1</a></li>
-           <li><a>UEFA Champions League</a></li>
+           <li><a class="bottomnav" class ="active">Premier League</a></li>
+           <li><a class="bottomnav">La Liga</a></li>
+           <li><a class="bottomnav">Bundesliga</a></li>
+           <li><a class="bottomnav">Serie A TIM</a></li>
+           <li><a class="bottomnav">Ligue 1</a></li>
+           <li><a class="bottomnav">UEFA Champions League</a></li>
         </ul>
      </nav>
      </div>
