--- a/standings/index.html
+++ b/standings/index.html
@@ -47,16 +47,17 @@
      <nav class="leaguesnav">
         <input type="checkbox" id="click">
         <ul>
-           <li><a class="bottomnav" class ="active">Premier League</a></li>
-           <li><a class="bottomnav">La Liga</a></li>
-           <li><a class="bottomnav">Bundesliga</a></li>
-           <li><a class="bottomnav">Serie A TIM</a></li>
-           <li><a class="bottomnav">Ligue 1</a></li>
-           <li><a class="bottomnav">UEFA Champions League</a></li>
+           <li><a class="bottomnav" class ="active" class="prem">Premier League</a></li>
+           <li><a class="bottomnav" class="laliga">La Liga</a></li>
+           <li><a class="bottomnav" class="bund">Bundesliga</a></li>
+           <li><a class="bottomnav" class="seriea">Serie A TIM</a></li>
+           <li><a class="bottomnav" class="ligue1">Ligue 1</a></li>
+           <li><a class="bottomnav" class="ucl">UEFA Champions League</a></li>
         </ul>
      </nav>
      </div>
-     <div id="wg-api-football-standings"
+<!-- PREMIER LEAGUE -->
+<div class="p" id="wg-api-football-standings"
      data-host="v3.football.api-sports.io"
      data-league="39"
      data-team=""
@@ -69,5 +70,78 @@
     type="module"
     src="https://widgets.api-sports.io/football/1.1.8/widget.js">
 </script>
+<!-- LA LIGA-->
+<div class="l" class="hidden" id="wg-api-football-standings"
+     data-host="v3.football.api-sports.io"
+     data-league="39"
+     data-team=""
+     data-season="2021"
+     data-key="e54f3d3972ca8251c1259694b49948de"
+     data-theme=""
+     data-show-errors="false"
+     class="api_football_loader"></div>
+<script
+    type="module"
+    src="https://widgets.api-sports.io/football/1.1.8/widget.js">
+</script>
+<!-- BUNDESLIGA -->
+<div class="b" class="hidden" id="wg-api-football-standings"
+     data-host="v3.football.api-sports.io"
+     data-league="39"
+     data-team=""
+     data-season="2021"
+     data-key="e54f3d3972ca8251c1259694b49948de"
+     data-theme=""
+     data-show-errors="false"
+     class="api_football_loader"></div>
+<script
+    type="module"
+    src="https://widgets.api-sports.io/football/1.1.8/widget.js">
+</script>
+<!--  -->
+<!-- SERIE A -->
+<div class="s" class="hidden" id="wg-api-football-standings"
+     data-host="v3.football.api-sports.io"
+     data-league="39"
+     data-team=""
+     data-season="2021"
+     data-key="e54f3d3972ca8251c1259694b49948de"
+     data-theme=""
+     data-show-errors="false"
+     class="api_football_loader"></div>
+<script
+    type="module"
+    src="https://widgets.api-sports.io/football/1.1.8/widget.js">
+</script>
+<!-- LIGUE 1  -->
+<div class="lig" class="hidden" id="wg-api-football-standings"
+     data-host="v3.football.api-sports.io"
+     data-league="39"
+     data-team=""
+     data-season="2021"
+     data-key="e54f3d3972ca8251c1259694b49948de"
+     data-theme=""
+     data-show-errors="false"
+     class="api_football_loader"></div>
+<script
+    type="module"
+    src="https://widgets.api-sports.io/football/1.1.8/widget.js">
+</script>
+<!-- UCL -->
+<div class="u" class="hidden" id="wg-api-football-standings"
+     data-host="v3.football.api-sports.io"
+     data-league="39"
+     data-team=""
+     data-season="2021"
+     data-key="e54f3d3972ca8251c1259694b49948de"
+     data-theme=""
+     data-show-errors="false"
+     class="api_football_loader"></div>
+<script
+    type="module"
+    src="https://widgets.api-sports.io/football/1.1.8/widget.js">
+</script>
+<!--  -->
+<script type="text/javascript" src="script.js"></script> 
 </body>
 </html>
