--- a/livestreams/1/index.html
+++ b/livestreams/1/index.html
@@ -61,10 +61,10 @@
 
     <h1>Deportivo Alaves VS Espanyol</h1>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-5/" target="_blank">Link 1</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-5/" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-5/" target="_blank">Link 3</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-5/" target="_blank">Link 4</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-5/" target="_blank">Link 5</a></h2>
+    <h2><a class="gamelinks" href="http://streamspass.live/soccer/stream2/?moment=10&match=Deportivo-Alaves-vs-Espanyol" target="_blank">Link 2</a></h2>
+    <h2><a class="gamelinks" href="http://enjoy4k.xyz/8k/hd4.php" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="https://ripple-stream.com/rtivo-alaves-vs-espa/" target="_blank">Link 4</a></h2>
+    <h2><a class="gamelinks" href="https://cr7soccer.club/T15/03.php" target="_blank">Link 5</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-5/" target="_blank">Link 6</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-5/" target="_blank">Link 7</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-5/" target="_blank">Link 8</a></h2>
