--- a/livestreams/10/index.html
+++ b/livestreams/10/index.html
@@ -61,14 +61,14 @@
         <h1>Elche CF VS Atletico Madrid</h1>
         <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-8/" target="_blank">Link 1</a></h2>
         <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/elche-vs-atl-madrid-s6/" target="_blank">Link 2</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+        <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/hampton-wanderers-vs-manch/s4.php" target="_blank">Link 3</a></h2>
+        <h2><a class="gamelinks" href="http://dubznetwork.com/game/soccer2/wolverhampton-wanderers-vs-manchester-city-11may/" target="_blank">Link 4</a></h2>
         <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/elche-vs-atl-madrid-s6/" target="_blank">Link 5</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
+        <h2><a class="gamelinks" href="https://ripple-stream.com/hampton-wanderers-vs-manch/" target="_blank">Link 6</a></h2>
+        <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/hampton-wanderers-vs-manch/s4.php" target="_blank">Link 7</a></h2>
         <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/elche-vs-atl-madrid-s6/" target="_blank">Link 8</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
-        <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
+        <h2><a class="gamelinks" href="https://ripple-stream.com/hampton-wanderers-vs-manch/" target="_blank">Link 9</a></h2>
+        <h2><a class="gamelinks" href="http://dubznetwork.com/game/soccer2/wolverhampton-wanderers-vs-manchester-city-11may/" target="_blank">Link 10</a></h2>
         <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
         <div class="bnavbar">
             <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
