--- a/livestreams/5/index.html
+++ b/livestreams/5/index.html
@@ -61,14 +61,14 @@
     <h1>Leicester City VS Norwich City</h1>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 1</a></h2>
     <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/leicester-vs-norwich-s2/" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
-    <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+    <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/ester-city-vs-norwich-c/s2.php" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="http://dubznetwork.com/game/soccer2/leicester-city-vs-norwich-city-11may/" target="_blank">Link 4</a></h2>
+    <h2><a class="gamelinks" href="http://hockeyweb.live/daily/totalsports/leicester11/" target="_blank">Link 5</a></h2>
+    <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/ester-city-vs-norwich-c/s2.php" target="_blank">Link 6</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 7</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 8</a></h2>
+    <h2><a class="gamelinks" href="http://dubznetwork.com/game/soccer2/leicester-city-vs-norwich-city-11may/" target="_blank">Link 8</a></h2>
     <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 9</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-2/" target="_blank">Link 10</a></h2>
+    <h2><a class="gamelinks" href="http://hockeyweb.live/daily/totalsports/leicester11/" target="_blank">Link 10</a></h2>
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
 
 </div>
