--- a/livestreams/6/index.html
+++ b/livestreams/6/index.html
@@ -59,16 +59,16 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
         <h1>Watford FC VS Everton FC</h1>
-        <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-3/" target="_blank">Link 1</a></h2>
-        <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/watford-vs-everton-s3/" target="_blank">Link 2</a></h2>
-        <h2><a class="gamelinks" href="https://ripple-stream.com/tford-vs-evert/" target="_blank">Link 3</a></h2>
-        <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/tford-vs-evert/s3.php" target="_blank">Link 4</a></h2>
-        <h2><a class="gamelinks" href="http://dubznetwork.com/game/soccer2/watford-vs-everton-11may/" target="_blank">Link 5</a></h2>
-        <h2><a class="gamelinks" href="https://ripple-stream.com/tford-vs-evert/" target="_blank">Link 6</a></h2>
-        <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/tford-vs-evert/s3.php" target="_blank">Link 7</a></h2>
-        <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-3/" target="_blank">Link 8</a></h2>
-        <h2><a class="gamelinks" href="http://dubznetwork.com/game/soccer2/watford-vs-everton-11may/" target="_blank">Link 9</a></h2>
-        <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-3/" target="_blank">Link 10</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
+        <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
         <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
 
 </div>
