--- a/livestreams/7/index.html
+++ b/livestreams/7/index.html
@@ -59,16 +59,16 @@
     <h3><strong>Disclaimer: These sites do not belong to us, do not enter any personal information. If you have any issues <a href="http://footballify.net/contact">Contact Us</a></strong></h3>
     <h3><strong>Tip: Click on any link then continue to your match. If a link does not work for you, try another link</strong></h3>
     <h1>Sevilla VS RCD Mallorca</h1>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-7/" target="_blank">Link 1</a></h2>
-    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/sevilla-vs-mallorca-s5/" target="_blank">Link 2</a></h2>
-    <h2><a class="gamelinks" href="https://mazystreams.xyz/event/2022/evilla-vs-mallo/s7.php" target="_blank">Link 3</a></h2>
-    <h2><a class="gamelinks" href="https://ripple-stream.com/evilla-vs-mallo/" target="_blank">Link 4</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-7/" target="_blank">Link 5</a></h2>
-    <h2><a class="gamelinks" href="http://hockeyweb.live/daily/totalsports/spain11/" target="_blank">Link 6</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-7/" target="_blank">Link 7</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-7/" target="_blank">Link 8</a></h2>
-    <h2><a class="gamelinks" href="http://www.ovostreams.com/events/2022/sevilla-vs-mallorca-s5/" target="_blank">Link 9</a></h2>
-    <h2><a class="gamelinks" href="https://manunitedlivestream.com/hd-live-7/" target="_blank">Link 10</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 1</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 2</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 3</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 4</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 5</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 6</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 7</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 8</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 9</a></h2>
+    <h2><a class="gamelinks" href="" target="_blank">Link 10</a></h2>
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
 
 </div>
