--- a/livestreams/index.html
+++ b/livestreams/index.html
@@ -49,17 +49,17 @@
 
 <div class="streamlist"> 
     <h3><strong>Choose a Game to Watch (Links will be up 30 minutes before kick-off)</strong></h3>
-    <h1 class="games"><a class="live" href="http://footballify.net/livestreams/1">Deportivo Alaves VS Espanyol</a></hi>
-    <h1 class="games"><a class="live" href="http://footballify.net/livestreams/2">Osasuna VS Getafe</a></h1>
-    <h1 class="games"><a class="live" href="http://footballify.net/livestreams/3">OGC Nice VS St. Etienne</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/4">Leeds United VS Chelsea FC</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/5">Leicester City VS Norwich City</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/6">Watford FC VS Everton FC</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/7">Sevilla VS RCD Mallorca</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/8">FC Nantes VS Stade Rennais</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/9">Manchester City VS Wolverhampton Wanderers</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/10">Elche CF VS Atletico Madrid</a></h1>
-    <h1 class="games"><a href="http://footballify.net/livestreams/11">Juventus VS Inter Milan</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/1">Real Sociedad VS Cadiz</a></hi>
+    <h1 class="games"><a href="http://footballify.net/livestreams/2">Rayo Vallecano VS Villareal</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/3">Real Madrid VS Levante</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/4">Tottenham Hotspur VS Arsenal</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Leicester City VS Norwich City</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Watford FC VS Everton FC</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Sevilla VS RCD Mallorca</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">FC Nantes VS Stade Rennais</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Manchester City VS Wolverhampton Wanderers</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Elche CF VS Atletico Madrid</a></h1>
+    <h1 class="games"><a href="http://footballify.net/livestreams/">Juventus VS Inter Milan</a></h1>
     <h3><strong>Close any Popup ads, these links are confirmed working and are tested regularly!</strong></h3>
 <div class="bnavbar">
         <a href="http://footballify.net/privacypolicy" class="active">Privacy Policy</a>
